crates/nash-can/tests/snapshots/kinds__retained_self_application_terminates.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type self 'f = Self ('f 'f)\ntype w = W (self self)"
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 6,
                column: 13,
            },
            end: Position {
                line: 6,
                column: 22,
            },
        },
        context: LittleField {
            union: "w",
            ctor: "W",
            index: 0,
        },
    },
]
