crates/nash-can/tests/snapshots/kinds__self_application_case_06.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('g) ('f ('f)))\ntype w = W (s tag (s tag))"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:3:26]
 2 │ type tag 'a = Tag
 3 │ type s 'f 'g 'a = S ('g ('g) ('f ('f)))
   ·                          ──
 4 │ type w = W (s tag (s tag))
   ╰────
  help: Check the type application and the kinds of its arguments.
