crates/nash-can/tests/snapshots/kinds__self_application_case_07.snap
---
source: crates/nash-can/tests/kinds.rs
expression: errors
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 3,
                column: 40,
            },
            end: Position {
                line: 3,
                column: 42,
            },
        },
        context: LittleField {
            union: "s",
            ctor: "S",
            index: 0,
        },
    },
]
