crates/nash-can/tests/snapshots/kinds__self_application_case_08.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f ('g)) ('f ('f) ('a)))\ntype w = W (s s (s s))"
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 3,
                column: 40,
            },
            end: Position {
                line: 3,
                column: 42,
            },
        },
        context: LittleField {
            union: "s",
            ctor: "S",
            index: 0,
        },
    },
]
